client/src/styles/components/_navbar.scss
@use '../utilities/variables' as *;
@use '../utilities/_mixins' as *;

.admin-navbar {
  background-color: #232B36;
  height: 100px;
}

.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem;
  color: white;
  height: 100px;

  .navbar-logo img {
    height: $navbar-height;
    width: auto;
  }

  .navbar-links {
    list-style: none;
    display: none;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    position: absolute;
    top: 80px;
    right: 0;
    left: 20px;
    background-color: $navbar-bg-color;
    border-radius: 5px;
    max-width: 90%;
    width: auto;
    padding: 0;
    transform: scale(0.9);
    transition: transform 0.3s ease, opacity 0.3s ease;
    opacity: 0;

    &.active {
      display: flex;
      opacity: 1;
    }

    a,
    button {
      @include navbar-link-style($navbar-link-font-size, $navbar-link-hover-color, $navbar-link-active-color);
    }
  }

  .hamburger {
    @include hamburger-style($hamburger-bar-width, $hamburger-bar-height, $hamburger-gap);

    div {
      background-color: white;
      transition: transform 0.3s ease, opacity 0.3s ease;
    }

    &.active {
      div:nth-child(1) {
        transform: translateY(8px) rotate(45deg);
      }

      div:nth-child(2) {
        opacity: 0;
      }

      div:nth-child(3) {
        transform: translateY(-8px) rotate(-45deg);
      }
    }
  }
}

@media (min-width: 768px) {
  .navbar {
    padding: 0 2rem;
    z-index: 1000;

    .navbar-logo {
      margin: auto 1rem;
    }

    .navbar-links {
      display: flex;
      flex-direction: row;
      gap: 1rem;
      position: static;
      background: none;
      transform: none;
      opacity: 1;

      .navbar-center {
        display: flex;
        justify-content: center;
        gap: 2rem;
        flex: 1;
      }

      .navbar-right {
        display: flex;
        justify-content: flex-end;
        gap: 1.5rem;
      }
    }

    .hamburger {
      display: none;
    }
  }
}

@media (min-width: 1024px) {
  .navbar-links {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;

    a,
    button {
      font-size: 1.2rem;
    }
  }
}

